setting(pom.xml): Java 9 이후부터 없어진 의존성 추가

--- a/ex1-hello-jpa/pom.xml
+++ b/ex1-hello-jpa/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>h2</artifactId>
             <version>1.4.200</version>
         </dependency>
+        <!-- Java 9 이상부터는 jaxb 관련 의존성이 빠져있기에 추가가 필요하다. -->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
     </dependencies>
 
 </project>
